修改忽略项

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dot files
-/.vscode/launch.json
+# /.vscode/launch.json
 /.settings
 /.eide/log
 /.eide.usr.ctx.json
@@ -13,3 +13,6 @@
 # eide template
 *.ept
 *.eide-template
+
+# vscode
+/.vscode
